@@ -4,13 +4,18 @@ CodeNames v1.X.X changelog:
  * Fix - Captains in offline game can now mark guessed cards
  * Fix - when returning from game to menu, drop the flag for being captain
  * Fix - disable appropriate inputs when key only option is enabled
+ * Fix - game ID input no longer 'loses' data
  * Limit the game ID to 15 characters and make the font bigger
+
+---
 
 CodeNames v1.1.3 changelog:
  * Add support for online play
  * Add borders to cards
  * Show remaining points to guess in the header
  * Allow all cards to share the same font size
+
+---
 
 CodeNames v1.0.0 changelog:
  * Initial release
